tests/files/type_checker_tests/should_pass/006.cmdr
//Test bindings type check
x = 2;
y = x;
