tests/files/type_checker_tests/should_fail/002.cmdr
//Should fail due to uninitialized variable
x = y;